--- a/src/components/Hero/index.scss
+++ b/src/components/Hero/index.scss
@@ -58,10 +58,12 @@
     }
 
     &-bottom {
-      position: absolute;
-      left: 50%;
-      bottom: 9%;
-      transform: translateX(-50%);
+      @media (min-width: 768px) {
+        position: absolute;
+        left: 50%;
+        bottom: 9%;
+        transform: translateX(-50%);
+      }
 
       @media (min-width: 992px) {
         margin-top: 65px;
