--- a/src/components/AppUiWrapper/index.scss
+++ b/src/components/AppUiWrapper/index.scss
@@ -1,4 +1,8 @@
 .app-ui-wrapper {
-  max-width: 1500px;
+  max-width: 1180px;
   margin: auto;
+
+  @media (max-width: 1179px) {
+    padding: 0 25px;
+  }
 }
