Create select section skelet

--- a/src/components/CopySection/CopyBox/index.scss
+++ b/src/components/CopySection/CopyBox/index.scss
@@ -13,6 +13,11 @@
     max-width: 480px;
   }
 
+  @media (min-width: 992px)  {
+    margin-right: auto;
+    margin-left: unset;
+  }
+
   &__circle-anim {
     margin-bottom: 20px;
   }
