--- a/src/views/Home/index.scss
+++ b/src/views/Home/index.scss
@@ -2,6 +2,6 @@
   background-color: $gray-title-text;
 
   &__calculators-bg {
-    background: transparent radial-gradient(closest-side at 50% 48%, #2C3138 0%, #171A1F 100%) 0% 0% no-repeat padding-box;
+    background: #171A1F;
   }
 }
