--- a/src/components/SelectSection/index.scss
+++ b/src/components/SelectSection/index.scss
@@ -2,6 +2,10 @@
   padding: 70px 0 120px;
   text-align: center;
 
+  &__content-wrapper {
+    margin-bottom: 45px;
+  }
+
   &__title {
     font-size: 36px;
     font-weight: 700;
