--- a/src/components/AppLoginModal/index.scss
+++ b/src/components/AppLoginModal/index.scss
@@ -2,10 +2,39 @@
   position: absolute;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   top: 0;
   left: 0;
   z-index: 1;
+
+  .input {
+    width: 100%;
+    border: 1px solid $gray-small-text;
+    font-size: 18px;
+    color: #737373;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    border-radius: 3px;
+  }
+
+  .input-errors {
+    position: relative;
+    top: -10px;
+    text-align: left;
+    font-size: 12px;
+    color: $primary-red;
+  }
+
+  &__title {
+    font-size: 32px;
+    font-weight: 600;
+    color: $gray-title-text;
+    margin-bottom: 15px;
+    text-align: center;
+  }
 
   &__modal {
     max-width: 420px;
@@ -14,6 +43,11 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px #171A1F80;
     text-align: center;
+    margin: auto;
+
+    &-wrapper {
+      width: 100%;
+    }
 
     &__bottom-content {
       display: grid;
@@ -32,5 +66,27 @@
     color: #2C3138;
     font-weight: 600;
     text-decoration: none;
+  }
+
+  &__submit {
+    width: 100%;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+    border-color: transparent;
+    background-color: #2ad46f;
+    box-shadow: -5px -5px 10px #E2FFEE;
+
+    font-size: 18px;
+    color: $gray-title-text;
+    font-weight: 600;
+    margin-bottom: 20px;
+    cursor: pointer;
+
+    &:disabled {
+      opacity: .5;
+    }
   }
 }
