--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -7,3 +7,14 @@
   font-family: 'Rajdhani', sans-serif;
   font-weight: 400;
 }
+
+:root {
+  --ms-border-color: #171A1F;
+  --ms-radius: 3px;
+  --ms-ring-width: 0;
+  --ms-spinner-color: #F41F33;
+  --ms-tag-bg: #F9F9F9;
+  --ms-option-bg-selected: #F9F9F9;
+  --ms-option-bg-selected: #F9F9F9;
+  --ms-option-bg-selected-pointed: #F9F9F9;
+}
