--- a/src/components/Hero/index.scss
+++ b/src/components/Hero/index.scss
@@ -5,6 +5,22 @@
   overflow: hidden;
   background: transparent radial-gradient(closest-side at 50% 48%, #2C3138 0%, #171A1F 100%) 0% 0% no-repeat padding-box;
 
+  &--top {
+    .Hero__content {
+      &-image {
+        @media (min-width: 768px) {
+          top: 42%;
+        }
+      }
+
+      &-bottom {
+        @media (min-width: 768px) {
+          bottom: 12%;
+        }
+      }
+    }
+  }
+
   &__content {
     text-align: center;
 
@@ -17,6 +33,8 @@
     }
 
     &-image {
+      transition: 1s;
+
       @media (min-width: 768px) {
         position: absolute;
         top: 50%;
@@ -58,6 +76,8 @@
     }
 
     &-bottom {
+      transition: 1s;
+      
       @media (min-width: 768px) {
         position: absolute;
         left: 50%;
